fix no overflow for elements that animate in from off screen

--- a/public/Assets/css/view.css
+++ b/public/Assets/css/view.css
@@ -44,6 +44,7 @@ canvas {
     padding-top: 50px;
     padding-bottom: 50px;
     overflow-x:hidden;
+    overflow-y:hidden;
 }
 
 
@@ -52,6 +53,7 @@ canvas {
     padding-top:50px;
     padding-bottom:50px;
     overflow-x:hidden;
+    overflow-y:hidden;
 }
 
 #contactMe {
